[package]
name = "rebab"
version = "0.1.0"
edition = "2024"
authors = ["lzpel"]
description = "Simple standalone reverse proxy"
repository = "https://github.com/lzpel/rebab"
categories = ["web-programming::http-server","api-bindings"]
keywords = ["reverse", "proxy"]
readme = "README.md"

[dependencies]
serde = { version = "*", features = ["derive"] }
serde_json = { version = "*"}
schemars = { version = "*", features = ["derive"] }
clap = { version = "*", features = ["derive"] }
hyper = { version = "*", features = ["client", "server", "http1", "http2"] }
tokio = { version = "*", features = ["rt", "rt-multi-thread", "macros", "signal"] }
hyper-util = { version="*", features = ["full"] }
tower = { version = "*" }