[package]
name = "rebab"
version = "0.1.2"
edition = "2024"
license = "MIT"
authors = ["lzpel"]
description = "A tiny, rule-based reverse proxy written in Rust"
repository = "https://github.com/lzpel/rebab"
categories = ["web-programming::http-server","api-bindings"]
keywords = ["reverse", "proxy"]
readme = "README.md"

[dependencies]
serde = { version = "^1", features = ["derive"] }
serde_json = { version = "^1"}
schemars = { version = "^1", features = ["derive"] }
clap = { version = "^4", features = ["derive"] }
hyper = { version = "^1", features = ["client", "server", "http1", "http2"] }
tokio = { version = "^1", features = ["rt", "rt-multi-thread", "macros", "signal"] }
hyper-util = { version="^0", features = ["full"] }